CRS-4 reset passsword

--- a/src/main/resources/templates/passwordReset.html
+++ b/src/main/resources/templates/passwordReset.html
@@ -51,7 +51,7 @@
     <p>Vous avez été invité à créer un mot de passe pour votre compte Food Truck Owner.</p>
     <p>Veuillez cliquer sur le bouton ci-dessous pour définir votre mot de passe.</p>
 
-    <a href="${url}" target="_blank"
+    <a th:href="${url}" target="_blank"
        style="background-color: #28a745; color: white; padding: 10px 15px; text-decoration: none; border-radius: 5px;">
         Définir mon mot de passe
     </a>
